# stock-trade-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: api_manager.h  database_manager.h  main_window.h  portfolio_manager.h  portfolio_widget.h  stock_chart_widget.h  stock_data.h  watchlist_widget.h
src/: api_manager.cpp  database_manager.cpp  main.cpp  main_window.cpp  portfolio_manager.cpp  portfolio_widget.cpp  stock_chart_widget.cpp  stock_data.cpp  watchlist_widget.cpp
